test/visibility/import/rename/renameToAlreadyImported.good
renameToAlreadyImported.chpl:6: error: symbol 'x' multiply defined
